<resources>
    <string name="app_name">MobileBOINC</string>
    <string name="app_desc">Mobile BOINC para Android com AndroBOINC</string>
    <string name="service_desc">Permitir participação em projetos BOINC para dispositivos Android</string>
    <string name="install_service_desc">Serviço de instalação do cliente nativo e aplicação BOINC </string>
    <string name="nboinc_service_desc">Serviço de cliente nativo do BOINC</string>
    <string name="newsHandlerDesc">Processador de notícias</string>
    <string name="widget2x1">BOINC nativo pequeno</string>
    <string name="widgetTablet">BOINC nativo grande</string>
    <string name="autostartReceiver">Inicio automático do recebedor</string>
    <string name="back">Voltar</string>
    <string name="next">Próximo</string>
    <string name="finish">Finalizar</string>
    <string name="info">Informação</string>
    <string name="authorization">Autorização…</string>
    <string name="cancel">Cancelar</string>
    <string name="cancelAll">Cancelar tudo</string>
    <string name="changelog">Trocar Log</string>
    <string name="close">Fechar</string>
    <string name="connecting">Conectando…</string>
    <string name="disabled">Desabilitado</string>
    <string name="dismiss">Recusar</string>
    <string name="error">Erro</string>
    <string name="homepage">Página inicial</string>
    <string name="license">Licença</string>
    <string name="notConnected">Não está conectado</string>
    <string name="notice">Aviso</string>
    <string name="ok">OK</string>
    <string name="apply">Aplicar</string>
    <string name="projectSuspendedByUser">Projeto suspenso pelo usuário</string>
    <string name="received">Recebido</string>
    <string name="retrievingData">Recuperando dados…</string>
    <string name="retrievingInitialData">Recuperando dados iniciais…</string>
    <string name="sent">Enviado</string>
    <string name="shutdown">Desligar</string>
    <string name="sources">Código fonte</string>
    <string name="taskSuspendedByUser">Tarefa suspense pelo usuário</string>
    <string name="unknown">desconhecido</string>
    <string name="upgradedTo">Atualizado para</string>
    <string name="warning">Aviso</string>
    <string name="now">Agora</string>
    <string name="battery">Bateria</string>
    <string name="defaultText">Padrão</string>
    <string name="copy">Copiar</string>
    <string name="saveToSDCard">Salvar no SDCard</string>
    <string name="restart">Reiniciar</string>
    <string name="clientRestarting">Reiniciar cliente nativo…</string>
    <string name="selectAll">Selecionar tudo</string>
    <string name="unselectAll">Desmarcar tudo</string>
    <string name="yesText">Sim</string>
    <string name="noText">Não</string>
    <string name="orText">ou</string>
    <string name="installedBinaries">Binários instalados</string>
    <string name="boincClient">Cliente BOINC</string>
    <string name="unitKiB">KiB</string>
    <string name="unitMiB">MiB</string>
    <string name="unitGiB">GiB</string>
    <string name="unitB">B</string>
    <string name="unitKB">KB</string>
    <string name="unitMB">MB</string>
    <string name="unitGB">GB</string>
    <string name="unitBps">B/s</string>
    <string name="unitKBps">KB/s</string>
    <string name="unitMBps">MB/s</string>
    <string name="gflops">GFLOPS</string>
    <string name="temp_info">Pressione o botão Menu</string>
    <string name="projects">Projetos</string>
    <string name="tasks">Tarefas</string>
    <string name="transfers">Transferências</string>
    <string name="messages">Mensagens</string>
    <string name="notices">Avisos</string>
    <string name="closeWarning">Pressione Voltar novamente (dentro de 5 segundos) para sair</string>
    <string name="menuStartUp">Iniciar</string>
    <string name="menuShutdown">Desligar</string>
    <string name="menuAbout">Sobre</string>
    <string name="menuAddNewHost">Adicionar novo host</string>
    <string name="menuConnect">Conectar</string>
    <string name="menuDisconnect">Desconectar</string>
    <string name="menuHosts">Administrar hosts</string>
    <string name="menuHostInfo">Informações do Host </string>
    <string name="menuManage">Administrar cliente</string>
    <string name="menuPreferences">Preferências</string>
    <string name="menuReconnect">Reconectar</string>
    <string name="menuRefresh">Atualizar</string>
    <string name="menuNativeClient">Cliente nativo</string>
    <string name="aboutTitle">Informação Básica</string>
    <string name="aboutHomepageUrl">http://nativeboinc.org/</string>
    <string name="aboutText">
		%1$s é de total direito do cliente nativo do BOINC para Android        integrado com gerenciador AndroBOINC v1.6.7b3.\n
		Obrigado por utilizar meu programa.\n
		Copyright © 2012 matszpk\n
		Original AndroBOINC por Pavel Michalec (Paulo M.)\n
		\n
		Obrigado a:\n
		Troll81 - pelo desenho do logo.\n
		BOINC@Poland - pelo suporte.\n
		Haer and eLPeCKo from CNT - tradução tcheca.\n
		Daniel Winzen - tradução alemã.\n
	</string>
    <string name="prefCategoryUI">Interface de usuário</string>
    <string name="prefScreenOrientation">Orientação de tela</string>
    <string name="prefKeepScreenOn">Manter tela ativa</string>
    <string name="prefKeepScreenOnEnabled">Evitar que tela se desligue</string>
    <string name="prefKeepScreenOnDisabled">Tela pode desligar por inatividade do usuário</string>
    <string name="prefAutoConnectTitle">Conectar automaticamente</string>
    <string name="prefAutoConnectDisabled">Não conectar automaticamente ao iniciar</string>
    <string name="prefAutoConnectEnabled">Conectar ao cliente recentemente conectado ao iniciar</string>
    <string name="prefCategoryNativeBoinc">Cliente BOINC Nativo</string>
    <string name="prefPowerSaving">Economia de energia</string>
    <string name="prefPowerSavingOnDisabled">Evitar bloqueio de tela e underclocking da CPU</string>
    <string name="prefPowerSavingOnEnabled">Permitir bloqueio de tela e underclocking da CPU</string>
    <string name="prefScreenLockUpdateInterval">Atualização periódica da tela de bloqueio</string>
    <string name="prefScreenLockUpdateIntervalSummary">Atualizar tela de bloqueio a cada</string>
    <string name="prefWidgetUpdateInterval">Atualização periódica da ferramenta</string>
    <string name="prefWidgetUpdateIntervalSummary">Atualizar ferramenta a cada</string>
    <string name="prefCategoryNetworkBW">Largura de banda de rede</string>
    <string name="prefAutoUpdateIntervalWiFi">Atualização periódica do WiFi</string>
    <string name="prefLimitMessagesTitle">Limite do número de messagens</string>
    <string name="prefLimitMessagesDisabled">Recuperar todas as mensagens ao conectar (pode transferir uma grande quantidade de dados)</string>
    <string name="prefLimitMessagesEnabled">Recuperar somente as 50 mensagens mais recentes ao conectar (poupa largura de banda)</string>
    <string name="prefNetworkUsageStats">Uso de rede</string>
    <string name="prefNetworkUsageDisabled">Estatísticas NÃO são coletadas</string>
    <string name="prefNetworkUsageNull">Recebido: 0B, Enviado: 0B</string>
    <string name="noHostConnected">Sem host conectado</string>
    <string name="selectHostTitle">Host atual</string>
    <string name="selectHostDialogTitle">Selecionar host</string>
    <string name="manageCategoryOptions">Opções</string>
    <string name="clientAddProjectTitle">Adicionar projeto BOINC</string>
    <string name="clientAddProjectSummary">Adicionar projeto BOINC</string>
    <string name="clientLocalPrefsTitle">Preferências Locais</string>
    <string name="clientLocalPrefsSummary">Preferências Locais para cliente</string>
    <string name="manageCategoryActivity">Atividade</string>
    <string name="clientActivityRunTitle">Modo de execução</string>
    <string name="clientActivityRunDialogTitle">Modo de execução</string>
    <string name="clientActivityNetworkTitle">Atividade da rede</string>
    <string name="clientActivityNetworkDialogTitle">Atividade da rede</string>
    <string name="manageCategoryAdvanced">Avançado</string>
    <string name="clientDoNetCommTitle">Fazer comunicação de rede</string>
    <string name="clientDoNetCommSummary">Fazer todas as comunicações de rede pendentes</string>
    <string name="clientShutdownTitle">Desligar cliente</string>
    <string name="clientShutdownSummary">Desligar o núcleo do cliente conectado no momento</string>
    <string name="nativeAutostart">Inicializando cliente</string>
    <string name="nativeAutostartTitle">Inicio automático do cliente</string>
    <string name="nativeBoincNetwork">Opções de rede</string>
    <string name="nativeHostnameTitle">Definir nome do host</string>
    <string name="nativeHostnameSummaryNone">Recuperado a partir do sistema de rede</string>
    <string name="nativeRemoteAccessTitle">Permitir acesso remoto</string>
    <string name="nativeRemoteAccessSummaryOn">Permitir acesso remoto aos outros hosts</string>
    <string name="nativeRemoteAccessSummaryOff">Proibir acesso remoto aos outros hosts</string>
    <string name="nativeAccessPasswordTitle">Senha de acesso</string>
    <string name="nativeAccessPasswordSummary">Trocar senha de acesso para cliente</string>
    <string name="nativeBoincInstallation">Opções de instalação</string>
    <string name="nativeInstalledBinariesTitle">Binários instalados</string>
    <string name="nativeInstalledBinariesSummary">Lista de binários instalados</string>
    <string name="nativeReinstallTitle">Reinstalar BOINC</string>
    <string name="nativeReinstallSummary">Fazer reinstalação do BOINC</string>
    <string name="nativeDeleteProjectBinsTitle">Deletar binários do projeto</string>
    <string name="nativeDeleteProjectBinsSummary">Deleta binários do projeto(do app_info.xml)</string>
    <string name="noProjects">Lista de projetos está vazia</string>
    <string name="projectListHelp"> Esta é a lista de projetos suportados. Para obter informações sobre o projeto, por favor pressione entradas mais antigas.</string>
    <string name="editBAMName">Nome de Usuário</string>
    <string name="editBAMUrl">URL</string>
    <string name="editBAMPassword">Senha</string>
    <string name="addProject">Adicionar projeto</string>
    <string name="installWelcome">Bem vindo ao NativeBOINC!</string>
    <string name="installClientInstall">Por favor, pressione o botão \'Próximo\' para fazer o download e instalar o cliente nativo do BOINC.</string>
    <string name="versionToInstall">Versão a instalar</string>
    <string name="installSuccessfully">Cliente nativo BOINC foi instalado com sucesso!</string>
    <string name="installAddProject">Por favor pressione o botão \'Adicionar projeto\' para adicionar o primeiro projeto BOINCt, ou \'Sincronizar BAM\' se quiser sincronizar com cliente BAM.</string>
    <string name="installFinished">A instalação foi finalizada. Por favor pressione o botão \'Finalizar\'.</string>
    <string name="installInfoFinished">Dica: Você também pode navegar no Project Wiki em \'http://nativeboinc.org/\' para obter ajuda e informações.</string>
    <string name="installFinishedBenchmark">Durante a instalação do primeiro projeto, o BOINC pode executar parâmetros, que trabalham  por 30 segundos.</string>
    <string name="installReadBefore">LEIA ANTES DE INSTALAR:</string>
    <string name="installAttention2">Se a aplicação fechar inesperadamente, por favor utilize \'Forçar encerramento\' e executar novamente.      
	    Aplicação elimina todos os clientes e inicia..</string>
    <string name="installNetworkAccess1">Cliente BOINC permite que você conecte com a rede utilizando gerenciador BOINC.</string>
    <string name="youCanChange">Agora, você pode trocar:</string>
    <string name="hostname">Nome do host</string>
    <string name="noInstallOpsText">Sem operações em segundo plano.</string>
    <string name="noProjectsWithInstalledBins">Sem projetos com binários instalados</string>
</resources>