<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefCategoryUI">
		<ListPreference
			android:key="screenOrientation"
			android:title="@string/prefScreenOrientation"
			android:entryValues="@array/prefScreenOrientationValues"
			android:entries="@array/prefScreenOrientationDisplay"
			android:defaultValue="-1"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="autoConnect"
			android:title="@string/prefAutoConnectTitle"
			android:summaryOff="@string/prefAutoConnectDisabled"
			android:summaryOn="@string/prefAutoConnectEnabled"
			android:defaultValue="false"
			android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefCategoryNativeBoinc">
		<CheckBoxPreference 
			android:key="powerSaving"
			android:title="@string/prefPowerSaving"
			android:summaryOff="@string/prefPowerSavingOnDisabled"
			android:summaryOn="@string/prefPowerSavingOnEnabled"
			android:defaultValue="false"
			android:persistent="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefCategoryNetworkBW">
		<CheckBoxPreference
			android:key="limitMessages"
			android:title="@string/prefLimitMessagesTitle"
			android:summaryOff="@string/prefLimitMessagesDisabled"
			android:summaryOn="@string/prefLimitMessagesEnabled"
			android:defaultValue="true"
			android:persistent="true" />
		<CheckBoxPreference
			android:key="trackNetworkUsage"
			android:title="@string/prefNetworkUsageStats"
			android:summaryOff="@string/prefNetworkUsageDisabled"
			android:summaryOn="@string/prefNetworkUsageNull"
			android:defaultValue="false"
			android:persistent="true" />
	</PreferenceCategory>
</PreferenceScreen>
