<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:key="selectedHost"
		android:title="@string/selectHostTitle"
		android:summary="@string/noHostConnected"
		android:dialogTitle="@string/selectHostDialogTitle"
		android:persistent="false" />
	<PreferenceCategory android:title="@string/manageCategoryOptions">
		<Preference
			android:key="addProject"
			android:title="@string/clientAddProjectTitle"
			android:summary="@string/clientAddProjectSummary"
			android:shouldDisableView="true"
			android:dependency="localPreferences"
			android:persistent="false" />
		<Preference
			android:key="localPreferences"
			android:title="@string/clientLocalPrefsTitle"
			android:summary="@string/clientLocalPrefsSummary"
			android:shouldDisableView="true"
			android:dependency="selectedHost"
			android:persistent="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/manageCategoryActivity">
		<ListPreference
			android:key="actRunMode"
			android:defaultValue="preferred"
			android:title="@string/clientActivityRunTitle"
			android:summary="@string/unknown"
			android:entries="@array/clientModeRun"
			android:entryValues="@array/clientModeValues"
			android:dialogTitle="@string/clientActivityRunDialogTitle"
			android:dependency="selectedHost"
			android:shouldDisableView="true"
			android:persistent="false" />
		<ListPreference
			android:key="actNetworkMode"
			android:defaultValue="preferred"
			android:title="@string/clientActivityNetworkTitle"
			android:summary="@string/unknown"
			android:entries="@array/clientModeNetwork"
			android:entryValues="@array/clientModeValues"
			android:dialogTitle="@string/clientActivityNetworkDialogTitle"
			android:dependency="actRunMode"
			android:shouldDisableView="true"
			android:persistent="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/manageCategoryAdvanced">
		
		<Preference
			android:key="doNetworkCommunication"
			android:title="@string/clientDoNetCommTitle"
			android:summary="@string/clientDoNetCommSummary"
			android:shouldDisableView="true"
			android:dependency="localPreferences"
			android:persistent="false" />
		<Preference
			android:key="shutDownClient"
			android:title="@string/clientShutdownTitle"
			android:summary="@string/clientShutdownSummary"
			android:shouldDisableView="true"
			android:dependency="localPreferences"
			android:persistent="false" />
	</PreferenceCategory>
</PreferenceScreen>
