<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >    	
    <PreferenceCategory android:title="@string/nativeAutostart">
        <ListPreference
            android:key="nativeAutostart"
            android:title="@string/nativeAutostartTitle"
            android:defaultValue="0"
            android:persistent="true"
            android:entries="@array/nativeAutostartLabels"
            android:entryValues="@array/nativeAutostartValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/nativeBoincNetwork">
        <EditTextPreference
			android:key="nativeHostname"
			android:title="@string/nativeHostnameTitle"
			android:summary="@string/nativeHostnameSummaryNone"
			android:defaultValue=""
			android:persistent="false" />
        <CheckBoxPreference 
            android:key="nativeRemoteAccess"
            android:title="@string/nativeRemoteAccessTitle"
            android:summaryOff="@string/nativeRemoteAccessSummaryOff"
            android:summaryOn="@string/nativeRemoteAccessSummaryOn"
            android:defaultValue="true"
            android:persistent="true" />
        <EditTextPreference
            android:key="nativeAccessPassword"
			android:title="@string/nativeAccessPasswordTitle"
			android:summary="@string/nativeAccessPasswordSummary"
			android:inputType="textPassword"
			android:defaultValue=""
			android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/nativeBoincInstallation">
        <Preference
            android:key="nativeInstalledBinaries"
            android:title="@string/nativeInstalledBinariesTitle"
            android:summary="@string/nativeInstalledBinariesSummary" 
            android:persistent="false" />
       	<Preference
       	    android:key="nativeReinstall"
       	    android:title="@string/nativeReinstallTitle"
       	    android:summary="@string/nativeReinstallSummary"
       	    android:persistent="false" />
       	<Preference
       	    android:key="nativeDeleteProjectBins"
       	    android:title="@string/nativeDeleteProjectBinsTitle"
       	    android:summary="@string/nativeDeleteProjectBinsSummary"
       	    android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>