<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dip">
	<ScrollView
  		android:layout_width="fill_parent"
  		android:layout_height="0dip"
  		android:layout_weight="1">
  		<LinearLayout 
  			android:orientation="vertical"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content">

  			<TextView
  			    android:layout_width="fill_parent"
  			    android:layout_height="wrap_content"
  			    android:paddingBottom="10dip"
  			    android:text="@string/installWelcome"
  			    android:textAppearance="?android:attr/textAppearanceLarge"
  			    android:textStyle="bold" />

		  	<TextView
				android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:text="@string/installClientInstall" />
		  	<RelativeLayout
		  		android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:paddingTop="10dip"
		  		android:paddingBottom="10dip">
			  	<TextView android:id="@+id/versionToInstall"
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content"
			  		android:textSize="@dimen/labelTextSize"
			  		android:layout_centerVertical="true"
			  		android:layout_alignParentTop="false"
			  		android:layout_alignParentRight="false"
			  		android:text="@string/versionToInstall" />
		  	</RelativeLayout>
		  	<RelativeLayout
		  	    android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:paddingBottom="10dip">
		  	  
		
		  	</RelativeLayout>
  		  	<TextView
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:textStyle="bold"
		  		android:text="@string/installReadBefore" />
		  	<TextView
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textSize="@dimen/labelTextSize"
		  		android:text="@string/installAttention2" />
	  	</LinearLayout>
	</ScrollView>
  	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:paddingTop="10dip">
		<Button android:id="@+id/installCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
		<Button android:id="@+id/installNext" 
		    android:enabled="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next" />
	</LinearLayout>
</LinearLayout>
