<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="10dip">
  	<TextView android:id="@+id/installProgressText"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="@dimen/labelTextSize"
  		android:text="@string/noInstallOpsText" />
  	<ListView android:id="@+id/installProgressList"
  		android:layout_width="fill_parent"
  		android:layout_height="0dip"
  		android:layout_weight="1"
  		android:paddingTop="5dip"
    	android:paddingBottom="5dip" />
  	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:paddingTop="10dip">
		<Button android:id="@+id/progressBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/back" />
		<Button android:id="@+id/progressCancelAll" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancelAll" />
		<Button android:id="@+id/progressNext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:enabled="false"
			android:text="@string/next" />
	</LinearLayout>
</LinearLayout>
