<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:padding="10dip">
    <TextView
		android:id="@+id/installFinishText"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="@dimen/labelTextSize"
  		android:text="@string/installFinished" />
    <TextView
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="@dimen/labelTextSize"
  		android:paddingTop="10dip"
  		android:text="@string/installInfoFinished" />
  	<Button android:id="@+id/installFinish"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:text="@string/finish" />
</LinearLayout>
