<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dip">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editBAMUrl"
			android:textSize="@dimen/labelTextSize"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editBAMUrl" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editBAMName"
			android:textSize="@dimen/labelTextSize"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editBAMName" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/editBAMPassword"
			android:textSize="@dimen/labelTextSize"
			android:paddingRight="5dip" />
		<EditText
			android:id="@+id/editBAMPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right">
		<Button
			android:id="@+id/editBAMCancel" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
		<Button
			android:id="@+id/editBAMOk" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:paddingLeft="20dip"
			android:paddingRight="20dip"
			android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
