<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView android:id="@+id/projectListHelp"
  		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
   	    android:layout_marginLeft="6dip"
       	android:layout_marginTop="6dip"
       	android:visibility="gone"
       	android:textSize="@dimen/labelTextSize"
       	android:text="@string/projectListHelp" />
  <ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:visibility="gone" />
  <TextView
  		android:id="@android:id/empty"
  		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
   	    android:layout_marginLeft="6dip"
       	android:layout_marginTop="6dip"
       	android:text="@string/noProjects"
       	android:visibility="gone"
		android:textAppearance="?android:attr/textAppearanceLarge" />
  <LinearLayout android:id="@+id/bottomButtons"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:paddingTop="10dip">
		<Button android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>
