<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="10dip">
    <TextView
    	android:id="@+id/noAvailableText"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/noProjectsWithInstalledBins"
    	android:textStyle="bold"
    	android:textSize="@dimen/labelTextSize"
    	android:layout_weight="0" />
    <ListView
    	android:id="@+id/projectsList"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:paddingTop="5dip"
    	android:paddingBottom="5dip" />
    <LinearLayout android:orientation="horizontal"
  		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="10dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:layout_gravity="right"
		android:layout_weight="0">
		<Button
			android:id="@+id/cancel" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
		<Button
			android:id="@+id/ok" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:enabled="false"
			android:paddingLeft="20dip"
			android:paddingRight="20dip"
			android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
